adding note to run department services